--- a/subcategories/health-metrics.html
+++ b/subcategories/health-metrics.html
@@ -87,7 +87,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Body Fat Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate body fat calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate body fat quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/bmr-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -95,7 +95,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">BMR Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate bmr calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate bmr quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/heart-rate-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -103,7 +103,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Heart Rate Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate heart rate calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate heart rate quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/blood-pressure-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -111,7 +111,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Blood Pressure Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate blood pressure calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate blood pressure quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/ideal-weight-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -119,7 +119,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Ideal Weight Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate ideal weight calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate ideal weight quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/waist-to-hip-ratio-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -127,7 +127,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Waist to Hip Ratio Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate waist to hip ratio calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate waist to hip ratio quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/bsa-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -135,7 +135,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Body Surface Area Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate body surface area calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate body surface area quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/pregnancy-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -143,7 +143,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Pregnancy Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate pregnancy calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate pregnancy quickly and accurately.</p>
                                 </div>
                             </a>
                     </div>
