--- a/subcategories/hobbies.html
+++ b/subcategories/hobbies.html
@@ -79,7 +79,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Knitting Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate knitting calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate knitting quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/crochet-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -87,7 +87,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Crochet Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate crochet calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate crochet quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/sewing-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -95,7 +95,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Sewing Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate sewing calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate sewing quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/quilting-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -103,7 +103,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Quilting Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate quilting calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate quilting quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/embroidery-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -111,7 +111,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Embroidery Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate embroidery calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate embroidery quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/cross-stitch-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -119,7 +119,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Cross Stitch Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate cross stitch calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate cross stitch quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/scrapbooking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -127,7 +127,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Scrapbooking Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate scrapbooking calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate scrapbooking quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/card-making-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -135,7 +135,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Card Making Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate card making calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate card making quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/origami-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -143,7 +143,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Origami Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate origami calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate origami quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/paper-craft-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -151,7 +151,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Paper Craft Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate paper craft calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate paper craft quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/jewelry-making-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -159,7 +159,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Jewelry Making Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate jewelry making calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate jewelry making quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/pottery-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -167,7 +167,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Pottery Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate pottery calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate pottery quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/woodworking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -175,7 +175,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Woodworking Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate woodworking calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate woodworking quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/gardening-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -183,7 +183,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Gardening Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate gardening calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate gardening quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/cooking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -191,7 +191,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Cooking Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate cooking calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate cooking quickly and accurately.</p>
                                 </div>
                             </a>
                     </div>
