--- a/subcategories/mortgage-real-estate.html
+++ b/subcategories/mortgage-real-estate.html
@@ -79,7 +79,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Mortgage Payment Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate mortgage payment calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate mortgage payment quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/mortgage-affordability-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -87,7 +87,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Mortgage Affordability Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate mortgage affordability calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate mortgage affordability quickly and accurately.</p>
                                 </div>
 
 
@@ -112,7 +112,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">House Affordability Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate house affordability calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate house affordability quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/down-payment-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -120,7 +120,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Down Payment Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate down payment calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate down payment quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/closing-cost-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -128,7 +128,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Closing Cost Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate closing cost calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate closing cost quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/pmi-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -136,7 +136,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">PMI Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate pmi calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate pmi quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/rent-vs-buy-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -144,7 +144,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Rent vs Buy Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate rent vs buy calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate rent vs buy quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/property-tax-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -152,7 +152,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Property Tax Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate property tax calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate property tax quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/home-value-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -160,7 +160,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Home Value Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate home value calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate home value quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/equity-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -168,7 +168,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Home Equity Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate home equity calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate home equity quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/cash-out-refinance-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -176,7 +176,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Cash-Out Refinance Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate cash-out refinance calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate cash-out refinance quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/arm-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -184,7 +184,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">ARM Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate arm calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate arm quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/fha-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -192,7 +192,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">FHA Loan Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate fha loan calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate fha loan quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/va-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -200,7 +200,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">VA Loan Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate va loan calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate va loan quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/jumbo-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -208,7 +208,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Jumbo Loan Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate jumbo loan calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate jumbo loan quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/investment-property-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -216,7 +216,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Investment Property Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate investment property calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate investment property quickly and accurately.</p>
                                 </div>
                             </a>
                     </div>
