--- a/subcategories/finance-personal-loans.html
+++ b/subcategories/finance-personal-loans.html
@@ -66,8 +66,8 @@
         <div class="flex flex-col lg:flex-row gap-8">
             <div class="w-full lg:w-2/3 space-y-10">
                 <nav class="text-sm text-gray-600" aria-label="Breadcrumb">
-                    <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="https://calcdomain.com/finance.html" class="hover:text-blue-600">Finance</a> &raquo;
+                    <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> 
+                    <a href="https://calcdomain.com/finance.html" class="hover:text-blue-600">Finance</a> 
                     <span class="text-gray-900">Personal Loans</span>
                 </nav>
 
