--- a/arc-length-calculator.html
+++ b/arc-length-calculator.html
@@ -116,7 +116,7 @@
       <a href="index.html" class="text-2xl font-bold text-blue-700">CalcDomain</a>
       <nav class="hidden md:flex gap-6 text-sm">
         <a href="math.html" class="hover:text-blue-700">Math</a>
-        <a href="subcategories/math-geometry.html" class="hover:text-blue-700">Geometry</a>
+        <a href="subcategories/geometry.html" class="hover:text-blue-700">Geometry</a>
         <a href="search.html" class="hover:text-blue-700">Search</a>
       </nav>
     </div>
