--- a/cylinder-volume-calculator.html
+++ b/cylinder-volume-calculator.html
@@ -198,7 +198,7 @@
     <nav aria-label="Breadcrumb" class="hidden md:block text-sm text-slate-600">
       <a class="hover:text-blue-700" href="index.html">Home</a> &raquo;
       <a class="hover:text-blue-700" href="math.html">Math</a> &raquo;
-      <a class="hover:text-blue-700" href="subcategories/math-geometry.html">Geometry</a> &raquo;
+      <a class="hover:text-blue-700" href="subcategories/geometry.html">Geometry</a> &raquo;
       <span aria-current="page">Cylinder Volume Calculator</span>
     </nav>
   </div>
