--- a/midpoint-calculator.html
+++ b/midpoint-calculator.html
@@ -152,7 +152,7 @@
     <nav class="text-sm text-slate-600 mb-4" aria-label="Breadcrumb">
       <a class="hover:text-blue-700" href="index.html">Home</a> &raquo;
       <a class="hover:text-blue-700" href="math.html">Math</a> &raquo;
-      <a class="hover:text-blue-700" href="subcategories/math-geometry.html">Geometry</a> &raquo;
+      <a class="hover:text-blue-700" href="subcategories/geometry.html">Geometry</a> &raquo;
       <span class="text-slate-900">Midpoint Calculator</span>
     </nav>
 
