--- a/prism-calculator.html
+++ b/prism-calculator.html
@@ -138,7 +138,7 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600 focusable">Home</a> &raquo;
           <a href="math.html" class="hover:text-blue-600 focusable">Math</a> &raquo;
-          <a href="subcategories/math-geometry.html" class="hover:text-blue-600 focusable">Geometry</a> &raquo;
+          <a href="subcategories/geometry.html" class="hover:text-blue-600 focusable">Geometry</a> &raquo;
           <span class="text-gray-900">Prism Calculator</span>
         </nav>
 
