--- a/regular-ngon-calculator.html
+++ b/regular-ngon-calculator.html
@@ -135,7 +135,7 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-700">Home</a> &raquo;
           <a href="math.html" class="hover:text-blue-700">Math</a> &raquo;
-          <a href="subcategories/math-geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
+          <a href="subcategories/geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
           <span class="text-gray-900">Regular n-gon Calculator</span>
         </nav>
 
