--- a/tangent-line-calculator.html
+++ b/tangent-line-calculator.html
@@ -144,7 +144,7 @@
         <div class="hidden md:flex items-center gap-6 text-sm">
           <a href="search.html" class="text-slate-700 hover:text-blue-700">Search</a>
           <a href="math.html" class="text-slate-700 hover:text-blue-700">Math</a>
-          <a href="subcategories/math-geometry.html" class="text-slate-700 hover:text-blue-700">Geometry</a>
+          <a href="subcategories/geometry.html" class="text-slate-700 hover:text-blue-700">Geometry</a>
         </div>
       </div>
     </nav>
@@ -157,7 +157,7 @@
         <nav class="text-sm text-slate-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-700">Home</a> &raquo;
           <a href="math.html" class="hover:text-blue-700">Math</a> &raquo;
-          <a href="subcategories/math-geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
+          <a href="subcategories/geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
           <span class="text-slate-900">Tangent Line Calculator</span>
         </nav>
 
