--- a/tire-pressure-calculator.html
+++ b/tire-pressure-calculator.html
@@ -230,7 +230,7 @@
         <section class="w-full lg:w-2/3">
             <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
                 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-                <a href="lifestyle.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
+                <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
                 <a href="subcategories/automotive.html" class="hover:text-blue-600">Automotive</a> &raquo;
                 <span class="text-gray-900">Tire Pressure Calculator</span>
             </nav>
