--- a/chord-calculator.html
+++ b/chord-calculator.html
@@ -136,7 +136,7 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a class="hover:text-blue-700" href="index.html">Home</a> &raquo;
           <a class="hover:text-blue-700" href="math.html">Math</a> &raquo;
-          <a class="hover:text-blue-700" href="subcategories/math-geometry.html">Geometry</a> &raquo;
+          <a class="hover:text-blue-700" href="subcategories/geometry.html">Geometry</a> &raquo;
           <span class="text-gray-900">Chord Length Calculator</span>
         </nav>
 
