--- a/circle-calculator.html
+++ b/circle-calculator.html
@@ -159,7 +159,7 @@
   <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
     <a class="hover:text-blue-600" href="index.html">Home</a> &raquo;
     <a class="hover:text-blue-600" href="math.html">Math</a> &raquo;
-    <a class="hover:text-blue-600" href="subcategories/math-geometry.html">Geometry</a> &raquo;
+    <a class="hover:text-blue-600" href="subcategories/geometry.html">Geometry</a> &raquo;
     <span class="text-gray-900">Circle Calculator</span>
   </nav>
 
