--- a/date-difference-calculator.html
+++ b/date-difference-calculator.html
@@ -189,7 +189,7 @@
       <section class="w-full lg:w-2/3">
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-          <a href="lifestyle.html" ctime-date.htmllass="hover:text-blue-600">Everyday Life</a> &raquo;
+          <a href="lifestyle-everyday.html" ctime-date.htmllass="hover:text-blue-600">Everyday Life</a> &raquo;
           <a href="subcategories/time-date.html" class="hover:text-blue-600">Time and Date</a> &raquo;
           <span class="text-gray-900">Date Difference Calculator</span>
         </nav>
@@ -655,7 +655,7 @@ Business days count excludes Saturdays and Sundays and removes any listed holida
       <section class="w-full lg:w-2/3">
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-          <a href="lifestyle.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
+          <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
           <a href="subcategories/time-date.html" class="hover:text-blue-600">Time and Date</a> &raquo;
           <span class="text-gray-900">Date Difference Calculator</span>
         </nav>
