--- a/gardening-calculator.html
+++ b/gardening-calculator.html
@@ -124,7 +124,7 @@
         <!-- Breadcrumb -->
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600 rounded">Home</a> &raquo;
-          <a href="lifestyle.html" class="hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600 rounded">Lifestyle Everyday</a> &raquo;
+          <a href="lifestyle-everyday.html" class="hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600 rounded">Lifestyle Everyday</a> &raquo;
           <a href="subcategories/lifestyle-hobbies.html" class="hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600 rounded">Hobbies</a> &raquo;
           <span class="text-gray-900">Gardening Calculator</span>
         </nav>
