--- a/hexagon-calculator.html
+++ b/hexagon-calculator.html
@@ -154,7 +154,7 @@
                 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <a href="math.html" class="hover:text-blue-600">Math</a> &raquo;
-                    <a href="subcategories/math-geometry.html" class="hover:text-blue-600">Geometry</a> &raquo;
+                    <a href="subcategories/geometry.html" class="hover:text-blue-600">Geometry</a> &raquo;
                     <span class="text-gray-900">Hexagon Calculator</span>
                 </nav>
 
