--- a/internet-speed-calculator.html
+++ b/internet-speed-calculator.html
@@ -145,7 +145,7 @@
         <!-- Breadcrumb -->
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-          <a href="lifestyle.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
+          <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
           <a href="subcategories/everyday.html" class="hover:text-blue-600">Everyday</a> &raquo;
           <a href="subcategories/miscellaneous.html" class="hover:text-blue-600">Miscellaneous</a> &raquo;
           <span class="text-gray-900">Internet Speed Calculator</span>
