--- a/minutes-calculator.html
+++ b/minutes-calculator.html
@@ -112,7 +112,7 @@
         <!-- Breadcrumb -->
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-          <a href="lifestyle.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
+          <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
           <a href="subcategories/time-date.html" class="hover:text-blue-600">Time and Date</a> &raquo;
           <span class="text-gray-900">Minutes Calculator</span>
         </nav>
