--- a/right-triangle-calculator.html
+++ b/right-triangle-calculator.html
@@ -142,7 +142,7 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600 focus-ring">Home</a> &raquo;
           <a href="math.html" class="hover:text-blue-600 focus-ring">Math</a> &raquo;
-          <a href="subcategories/math-geometry.html" class="hover:text-blue-600 focus-ring">Geometry</a> &raquo;
+          <a href="subcategories/geometry.html" class="hover:text-blue-600 focus-ring">Geometry</a> &raquo;
           <span class="text-gray-900">Right Triangle Calculator</span>
         </nav>
 
