--- a/shift-calculator.html
+++ b/shift-calculator.html
@@ -128,7 +128,7 @@
       <section class="w-full lg:w-2/3">
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-          <a href="lifestyle.html" class="hover:text-blue-600">Lifestyle &amp; Everyday</a> &raquo;
+          <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle &amp; Everyday</a> &raquo;
           <a href="subcategories/time-date.html" class="hover:text-blue-600">Time and Date</a> &raquo;
           <span class="text-gray-900">Shift Calculator</span>
         </nav>
