--- a/torque-to-hp-calculator.html
+++ b/torque-to-hp-calculator.html
@@ -241,7 +241,7 @@ d="M4 6h16M4 12h16M4 18h16"></path>
 <section class="w-full lg:w-2/3">
 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-<a href="lifestyle.html" class="hover:text-blue-600">Everyday Life</a> &raquo;
+<a href="lifestyle-everyday.html" class="hover:text-blue-600">Everyday Life</a> &raquo;
 <a href="subcategories/automotive.html" class="hover:text-blue-600">Automotive</a> &raquo;
 <span class="text-gray-900">Torque to HP Calculator</span>
 </nav>
