--- a/trapezoid-calculator.html
+++ b/trapezoid-calculator.html
@@ -110,7 +110,7 @@
     <nav aria-label="Breadcrumb" class="text-sm text-gray-600 mb-4">
       <a href="index.html" class="hover:text-blue-700">Home</a> &raquo;
       <a href="math.html" class="hover:text-blue-700">Math</a> &raquo;
-      <a href="subcategories/math-geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
+      <a href="subcategories/geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
       <span class="text-gray-900">Trapezoid Calculator</span>
     </nav>
 
