--- a/trip-cost-calculator.html
+++ b/trip-cost-calculator.html
@@ -232,7 +232,7 @@ d="M4 6h16M4 12h16M4 18h16"></path>
 <section class="w-full lg:w-2/3">
 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-<a href="lifestyle.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
+<a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
 <a href="subcategories/lifestyle-automotive.html" class="hover:text-blue-600">Automotive</a> &raquo;
 <span class="text-gray-900">Trip Cost Calculator</span>
 </nav>
