--- a/week-number-calculator.html
+++ b/week-number-calculator.html
@@ -164,7 +164,7 @@ d="M4 6h16M4 12h16M4 18h16"></path>
 <section class="w-full lg:w-2/3">
 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-<a href="lifestyle.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
+<a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
 <a href="subcategories/lifestyle-misc.html" class="hover:text-blue-600">Miscellaneous</a> &raquo;
 <span class="text-gray-900">Week Number Calculator</span>
 </nav>
