--- a/ip-calculator.html
+++ b/ip-calculator.html
@@ -70,7 +70,7 @@
   "itemListElement":[
     {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
     {"@type":"ListItem","position":2,"name":"Lifestyle","item":"https://calcdomain.com/lifestyle-everyday.html"},
-    {"@type":"ListItem","position":3,"name":"Everyday","item":"https://calcdomain.com/subcategories/everyday.html"},
+    {"@type":"ListItem","position":3,"name":"Everyday","item":"https://calcdomain.com/subcategories/lifestyle-everyday.html"},
     {"@type":"ListItem","position":4,"name":"IP Calculator","item":"https://calcdomain.com/ip-calculator.html"}
   ]
 }
@@ -113,7 +113,7 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
-          <a href="subcategories/everyday.html" class="hover:text-blue-600">Everyday</a> &raquo;
+          <a href="subcategories/lifestyle-everyday.html" class="hover:text-blue-600">Everyday</a> &raquo;
           <span class="text-gray-900">IP Calculator</span>
         </nav>
 
