--- a/network-calculator.html
+++ b/network-calculator.html
@@ -107,7 +107,7 @@
       <section class="w-full lg:w-2/3">
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a class="hover:text-blue-700" href="index.html">Home</a> &raquo;
-          <a class="hover:text-blue-700" href="everyday.html">Lifestyle Everyday</a> &raquo;
+          <a class="hover:text-blue-700" href="lifestyle-everyday.html">Lifestyle Everyday</a> &raquo;
           <a class="hover:text-blue-700" href="subcategories/miscellaneous.html">Miscellaneous</a> &raquo;
           <span class="text-gray-900">Network Calculator</span>
         </nav>
