--- a/page-counter.html
+++ b/page-counter.html
@@ -236,7 +236,7 @@ box-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) v
     <section class="w-full lg:w-2/3">
       <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
         <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-        <a href="everyday.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
+        <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
         <a href="subcategories/miscellaneous.html" class="hover:text-blue-600">Miscellaneous</a> &raquo;
         <span class="text-gray-900">Page Counter</span>
       </nav>
