--- a/upload-time-calculator.html
+++ b/upload-time-calculator.html
@@ -139,7 +139,7 @@
         <!-- Breadcrumb -->
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-700 a11y-focus">Home</a> &raquo;
-          <a href="everyday.html" class="hover:text-blue-700 a11y-focus">Lifestyle &amp; Everyday</a> &raquo;
+          <a href="lifestyle-everyday.html" class="hover:text-blue-700 a11y-focus">Lifestyle &amp; Everyday</a> &raquo;
           <a href="subcategories/miscellaneous.html" class="hover:text-blue-700 a11y-focus">Miscellaneous</a> &raquo;
           <span class="text-gray-900">Upload Time Calculator</span>
         </nav>
