--- a/checksum-calculator.html
+++ b/checksum-calculator.html
@@ -113,7 +113,7 @@
   <!-- Breadcrumb -->
   <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
     <a href="index.html" class="hover:text-blue-600 focus-ring">Home</a> &raquo;
-    <a href="everyday.html" class="hover:text-blue-600 focus-ring">Lifestyle &amp; Everyday</a> &raquo;
+    <a href="lifestyle-everyday.html" class="hover:text-blue-600 focus-ring">Lifestyle &amp; Everyday</a> &raquo;
     <a href="subcategories/miscellaneous.html" class="hover:text-blue-600 focus-ring">Miscellaneous</a> &raquo;
     <span class="text-gray-900">Checksum Calculator</span>
   </nav>
