--- a/internet-speed-calculator.html
+++ b/internet-speed-calculator.html
@@ -73,7 +73,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
       {"@type":"ListItem","position":2,"name":"Lifestyle","item":"https://calcdomain.com/lifestyle-everyday.html"},
-      {"@type":"ListItem","position":3,"name":"Everyday","item":"https://calcdomain.com/subcategories/everyday.html"},
+      {"@type":"ListItem","position":3,"name":"Everyday","item":"https://calcdomain.com/subcategories/lifestyle-everyday.html"},
       {"@type":"ListItem","position":4,"name":"Miscellaneous","item":"https://calcdomain.com/subcategories/miscellaneous.html"},
       {"@type":"ListItem","position":5,"name":"Internet Speed Calculator","item":"https://calcdomain.com/internet-speed-calculator.html"}
     ]
@@ -146,7 +146,7 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle</a> &raquo;
-          <a href="subcategories/everyday.html" class="hover:text-blue-600">Everyday</a> &raquo;
+          <a href="subcategories/lifestyle-everyday.html" class="hover:text-blue-600">Everyday</a> &raquo;
           <a href="subcategories/miscellaneous.html" class="hover:text-blue-600">Miscellaneous</a> &raquo;
           <span class="text-gray-900">Internet Speed Calculator</span>
         </nav>
