--- a/latency-calculator.html
+++ b/latency-calculator.html
@@ -111,7 +111,7 @@
         <!-- Breadcrumb -->
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-700 focus-ring">Home</a> &raquo;
-          <a href="everyday.html" class="hover:text-blue-700 focus-ring">Lifestyle &amp; Everyday</a> &raquo;
+          <a href="lifestyle-everyday.html" class="hover:text-blue-700 focus-ring">Lifestyle &amp; Everyday</a> &raquo;
           <a href="subcategories/miscellaneous.html" class="hover:text-blue-700 focus-ring">Miscellaneous</a> &raquo;
           <span class="text-gray-900">Latency Calculator</span>
         </nav>
