--- a/reading-time-calculator.html
+++ b/reading-time-calculator.html
@@ -202,7 +202,7 @@ d="M4 6h16M4 12h16M4 18h16"></path>
 <section class="w-full lg:w-2/3">
 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-<a href="everyday.html" class="hover:text-blue-600">Lifestyle & Everyday</a> &raquo;
+<a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle & Everyday</a> &raquo;
 <a href="subcategories/miscellaneous.html" class="hover:text-blue-600">Miscellaneous</a> &raquo;
 <span class="text-gray-900">Reading Time Calculator</span>
 </nav>
@@ -707,7 +707,7 @@ d="M4 6h16M4 12h16M4 18h16"></path>
 <section class="w-full lg:w-2/3">
 <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
 <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-<a href="everyday.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
+<a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle Everyday</a> &raquo;
 <a href="subcategories/miscellaneous.html" class="hover:text-blue-600">Miscellaneous</a> &raquo;
 <span class="text-gray-900">CPM Calculator</span>
 </nav>
