--- a/subnet-calculator.html
+++ b/subnet-calculator.html
@@ -141,7 +141,7 @@
         <!-- Breadcrumb -->
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-          <a href="everyday.html" class="hover:text-blue-600">Lifestyle &amp; Everyday</a> &raquo;
+          <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle &amp; Everyday</a> &raquo;
           <a href="subcategories/miscellaneous.html" class="hover:text-blue-600">Miscellaneous</a> &raquo;
           <span class="text-gray-900">Subnet Calculator</span>
         </nav>
